Apply bold formatting to Jaehyung Seo in all publications

--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2025</span>
                         <h3 class="publication-title">🌟 The Impact of Negated Text on Hallucination with Large Language Models</h3>
-                        <p class="publication-authors">Jaehyung Seo, Hyeonseok Moon, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.emnlp-main.684/" target="_blank">Paper</a>
@@ -75,7 +75,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2025 Findings</span>
                         <h3 class="publication-title">🌟 KoLEG: On-the-Fly Korean Legal Knowledge Editing with Continuous Retrieval</h3>
-                        <p class="publication-authors">Jaehyung Seo, Dahyun Jung, Jaewook Lee, Yongchan Chun, Dongjun Kim, Hwijung Ryu, Donghoon Shin, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Dahyun Jung, Jaewook Lee, Yongchan Chun, Dongjun Kim, Hwijung Ryu, Donghoon Shin, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Findings, 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.findings-emnlp.489/" target="_blank">Paper</a>
@@ -85,7 +85,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2025</span>
                         <h3 class="publication-title">🌟 MultiDocFusion: Hierarchical and Multimodal Chunking Pipeline for Enhanced RAG on Long Industrial Documents</h3>
-                        <p class="publication-authors">Joong Min Shin, Chanjun Park, Jeongbae Park, Jaehyung Seo*, Heuiseok Lim*</p>
+                        <p class="publication-authors">Joong Min Shin, Chanjun Park, Jeongbae Park, <strong>Jaehyung Seo</strong>*, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.emnlp-main.1062/" target="_blank">Paper</a>
@@ -95,7 +95,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2025</span>
                         <h3 class="publication-title">🌟 Metric Calculating Benchmark: Code-Verifiable Complicate Instruction Following Benchmark for Large Language Models</h3>
-                        <p class="publication-authors">Hyeonseok Moon, Seongtae Hong, Jaehyung Seo*, Heuiseok Lim*</p>
+                        <p class="publication-authors">Hyeonseok Moon, Seongtae Hong, <strong>Jaehyung Seo</strong>*, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.emnlp-main.1051/" target="_blank">Paper</a>
@@ -105,7 +105,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2025 Findings</span>
                         <h3 class="publication-title">LimaCost: Data Valuation for Instruction Tuning of Large Language Models</h3>
-                        <p class="publication-authors">Hyeonseok Moon, Jaehyung Seo, Seonmin Koo, Jinsung Kim, Youngkyoung Ham, Jiwon Moon, Heuiseok Lim*</p>
+                        <p class="publication-authors">Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Seonmin Koo, Jinsung Kim, Youngkyoung Ham, Jiwon Moon, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Findings, 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.findings-emnlp.688/" target="_blank">Paper</a>
@@ -115,7 +115,7 @@
                     <div class="publication-item">
                         <span class="publication-year">ICLR 2025</span>
                         <h3 class="publication-title">🌟 K-HALU: Multiple Answer Korean Hallucination Benchmark for Large Language Models</h3>
-                        <p class="publication-authors">Jaehyung Seo, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
                         <p class="publication-venue">International Conference on Learning Representations (ICLR), 2025</p>
                         <div class="publication-links">
                             <a href="https://openreview.net/forum?id=VnLhUogHYE" target="_blank">Paper</a>
@@ -125,7 +125,7 @@
                     <div class="publication-item">
                         <span class="publication-year">NAACL 2025 Findings</span>
                         <h3 class="publication-title">Find the Intention of Instruction: Comprehensive Evaluation of Instruction Understanding for Large Language Models</h3>
-                        <p class="publication-authors">Hyeonseok Moon, Jaehyung Seo, Seungyoon Lee, Chanjun Park*, Heuiseok Lim*</p>
+                        <p class="publication-authors">Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Seungyoon Lee, Chanjun Park*, Heuiseok Lim*</p>
                         <p class="publication-venue">North American Chapter of the ACL (NAACL) Findings, 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.findings-naacl.330/" target="_blank">Paper</a>
@@ -135,7 +135,7 @@
                     <div class="publication-item">
                         <span class="publication-year">NAACL 2025</span>
                         <h3 class="publication-title">CoME: An Unlearning-based Approach to Conflict-free Model Editing</h3>
-                        <p class="publication-authors">Dahyun Jung, Jaehyung Seo, Jaewook Lee, Chanjun Park*, Heuiseok Lim*</p>
+                        <p class="publication-authors">Dahyun Jung, <strong>Jaehyung Seo</strong>, Jaewook Lee, Chanjun Park*, Heuiseok Lim*</p>
                         <p class="publication-venue">North American Chapter of the ACL (NAACL), 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.naacl-long.325/" target="_blank">Paper</a>
@@ -149,7 +149,7 @@
                     <div class="publication-item">
                         <span class="publication-year">HCLT 2024 🏆 Best Paper</span>
                         <h3 class="publication-title">🌟 Post-negation Text Induce New Hallucinations in Large Language Models</h3>
-                        <p class="publication-authors">Jaehyung Seo, Aram So, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Aram So, Heuiseok Lim*</p>
                         <p class="publication-venue">Annual Conference on Human and Cognitive Language Technology (HCLT), 2024</p>
                         <div class="publication-links">
                             <a href="https://koreascience.kr/article/CFKO202404272002652.page" target="_blank">Paper</a>
@@ -159,7 +159,7 @@
                     <div class="publication-item">
                         <span class="publication-year">ACL 2024 Findings</span>
                         <h3 class="publication-title">🌟 KoCommonGEN v2: A Benchmark for Navigating Korean Commonsense Reasoning Challenges in Large Language Models</h3>
-                        <p class="publication-authors">Jaehyung Seo, Jaewook Lee, Chanjun Park, SeongTae Hong, Seungjun Lee, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Jaewook Lee, Chanjun Park, SeongTae Hong, Seungjun Lee, Heuiseok Lim*</p>
                         <p class="publication-venue">Annual Meeting of the Association for Computational Linguistics (ACL) Findings, 2024</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2024.findings-acl.141/" target="_blank">Paper</a>
@@ -169,7 +169,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EACL 2024 Findings</span>
                         <h3 class="publication-title">Hyper-BTS Dataset: Scalability and Enhanced Analysis of Back TranScription (BTS) for ASR Post-Processing</h3>
-                        <p class="publication-authors">Chanjun Park, Jaehyung Seo, Seolhwa Lee, Junyoung Son, Hyeonseok Moon, Sugyeong Eo, Chanhee Lee, Heuiseok Lim*</p>
+                        <p class="publication-authors">Chanjun Park, <strong>Jaehyung Seo</strong>, Seolhwa Lee, Junyoung Son, Hyeonseok Moon, Sugyeong Eo, Chanhee Lee, Heuiseok Lim*</p>
                         <p class="publication-venue">European Chapter of the ACL (EACL) Findings, 2024</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2024.findings-eacl.5/" target="_blank">Paper</a>
@@ -183,7 +183,7 @@
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2023</span>
                         <h3 class="publication-title">🌟 CHEF in the Language Kitchen: A Generative Data Augmentation Leveraging Korean Morpheme Ingredients</h3>
-                        <p class="publication-authors">Jaehyung Seo, Hyeonseok Moon, Jaewook Lee, Sugyeong Eo, Chanjun Park, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Jaewook Lee, Sugyeong Eo, Chanjun Park, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2023.emnlp-main.367/" target="_blank">Paper</a>
@@ -197,7 +197,7 @@
                     <div class="publication-item">
                         <span class="publication-year">Knowledge-Based Systems</span>
                         <h3 class="publication-title">🌟 PU-GEN: Enhancing generative commonsense reasoning for language models with human-centered knowledge</h3>
-                        <p class="publication-authors">Jaehyung Seo, Dongsuk Oh, Sugyeong Eo, Chanjun Park, Kisu Yang, Hyeonseok Moon, Kinam Park, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Dongsuk Oh, Sugyeong Eo, Chanjun Park, Kisu Yang, Hyeonseok Moon, Kinam Park, Heuiseok Lim*</p>
                         <p class="publication-venue">Knowledge-Based Systems, 2022</p>
                         <div class="publication-links">
                             <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705122009546" target="_blank">Paper</a>
@@ -207,7 +207,7 @@
                     <div class="publication-item">
                         <span class="publication-year">IEEE Access</span>
                         <h3 class="publication-title">🌟 Plain Template Insertion: Korean-Prompt-Based Engineering for Few-Shot Learners</h3>
-                        <p class="publication-authors">Jaehyung Seo, Hyeonseok Moon, Chanhee Lee, Sugyeong Eo, Chanjun Park, Jihoon Kim, Changwoo Chun, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Chanhee Lee, Sugyeong Eo, Chanjun Park, Jihoon Kim, Changwoo Chun, Heuiseok Lim*</p>
                         <p class="publication-venue">IEEE Access, 2022</p>
                         <div class="publication-links">
                             <a href="https://ieeexplore.ieee.org/document/9913979" target="_blank">Paper</a>
@@ -217,7 +217,7 @@
                     <div class="publication-item">
                         <span class="publication-year">NAACL 2022 Findings</span>
                         <h3 class="publication-title">🌟 A Dog Is Passing Over The Jet? A Text-Generation Dataset for Korean Commonsense Reasoning and Evaluation</h3>
-                        <p class="publication-authors">Jaehyung Seo*, Seounghoon Lee*, Chanjun Park, Yoonna Jang, Hyeonseok Moon, Sugyeong Eo, Seonmin Koo, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>*, Seounghoon Lee*, Chanjun Park, Yoonna Jang, Hyeonseok Moon, Sugyeong Eo, Seonmin Koo, Heuiseok Lim*</p>
                         <p class="publication-venue">North American Chapter of the ACL (NAACL) Findings, 2022</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2022.findings-naacl.172/" target="_blank">Paper</a>
@@ -227,7 +227,7 @@
                     <div class="publication-item">
                         <span class="publication-year">Mathematics</span>
                         <h3 class="publication-title">🌟 Dense-to-Question and Sparse-to-Answer: Hybrid Retriever System for Industrial Frequently Asked Questions</h3>
-                        <p class="publication-authors">Jaehyung Seo, Taemin Lee, Hyeonseok Moon, Chanjun Park, Sugyeong Eo, Imatitikua D Aiyanyo, Kinam Park, Aram So, Sungmin Ahn, Jeongbae Park*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Taemin Lee, Hyeonseok Moon, Chanjun Park, Sugyeong Eo, Imatitikua D Aiyanyo, Kinam Park, Aram So, Sungmin Ahn, Jeongbae Park*</p>
                         <p class="publication-venue">Mathematics, 2022</p>
                         <div class="publication-links">
                             <a href="https://www.mdpi.com/2227-7390/10/8/1335" target="_blank">Paper</a>
@@ -241,7 +241,7 @@
                     <div class="publication-item">
                         <span class="publication-year">HCLT 2021 🏆 Outstanding Paper</span>
                         <h3 class="publication-title">🌟 KommonGen: A Dataset for Korean Generative Commonsense Reasoning Evaluation</h3>
-                        <p class="publication-authors">Jaehyung Seo, Chanjun Park, Hyeonseok Moon, Sugyeong Eo, Myunghoon Kang, Seounghoon Lee, Heuiseok Lim*</p>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Hyeonseok Moon, Sugyeong Eo, Myunghoon Kang, Seounghoon Lee, Heuiseok Lim*</p>
                         <p class="publication-venue">Annual Conference on Human and Cognitive Language Technology (HCLT), 2021</p>
                         <div class="publication-links">
                             <a href="https://j-seo.github.io/KommonGen_-A-Dataset-for-Korean-Generative-Commonsense-Reasoning-Evaluation/" target="_blank">Paper</a>
@@ -251,7 +251,7 @@
                     <div class="publication-item">
                         <span class="publication-year">WAT 2021</span>
                         <h3 class="publication-title">BTS: Back TranScription for Speech-to-Text Post-Processor using Text-to-Speech-to-Text</h3>
-                        <p class="publication-authors">Chanjun Park, Jaehyung Seo, Seolhwa Lee, Chanhee Lee, Hyeonseok Moon, Sugyeong Eo, Heuiseok Lim*</p>
+                        <p class="publication-authors">Chanjun Park, <strong>Jaehyung Seo</strong>, Seolhwa Lee, Chanhee Lee, Hyeonseok Moon, Sugyeong Eo, Heuiseok Lim*</p>
                         <p class="publication-venue">Workshop on Asian Translation (WAT), 2021</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2021.wat-1.10/" target="_blank">Paper</a>
