--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,16 @@
                 <h2 style="margin-bottom: var(--spacing-lg);">2025</h2>
                 <div class="card" style="margin-bottom: var(--spacing-2xl);">
                     <div class="publication-item">
+                        <span class="publication-year">Expert Systems with Applications</span>
+                        <h3 class="publication-title">An analysis on language transfer of pre-trained language model with cross-lingual post-training</h3>
+                        <p class="publication-authors">Suhyune Son, Chanjun Park, Jungseob Lee, Midan Shim, Chanhee Lee, Yoonna Jang, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">Expert Systems with Applications, 2025</p>
+                        <div class="publication-links">
+                            <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417424027088" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
                         <span class="publication-year">EMNLP 2025</span>
                         <h3 class="publication-title">🌟 The Impact of Negated Text on Hallucination with Large Language Models</h3>
                         <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Heuiseok Lim*</p>
@@ -175,6 +185,66 @@
                             <a href="https://aclanthology.org/2024.findings-eacl.5/" target="_blank">Paper</a>
                         </div>
                     </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">EACL 2024 Findings</span>
+                        <h3 class="publication-title">Generative Interpretation: Toward Human-Like Evaluation for Educational Question-Answer Pair Generation</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Jaewook Lee, Sugyeong Eo, Chanjun Park, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">European Chapter of the ACL (EACL) Findings, 2024</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2024.findings-eacl.145/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">EMNLP 2024 Industry</span>
+                        <h3 class="publication-title">Intelligent Predictive Maintenance RAG framework for Power Plants: Enhancing QA with StyleDFS and Domain Specific Instruction Tuning</h3>
+                        <p class="publication-authors">Seongtae Hong, Joong Min Shin, <strong>Jaehyung Seo</strong>, Taemin Lee, Jeongbae Park, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Industry Track, 2024</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2024.emnlp-industry.61/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">ACL 2024 Findings</span>
+                        <h3 class="publication-title">Length-aware Byte Pair Encoding for Mitigating Over-segmentation in Korean Machine Translation</h3>
+                        <p class="publication-authors">Jungseob Lee, Hyeonseok Moon, Seungjun Lee, Chanjun Park, Sugyeong Eo, <strong>Jaehyung Seo</strong>, Seonmin Koo, Heuiseok Lim*</p>
+                        <p class="publication-venue">Annual Meeting of the Association for Computational Linguistics (ACL) Findings, 2024</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2024.findings-acl.135/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">LREC-COLING 2024</span>
+                        <h3 class="publication-title">Leveraging Pre-existing Resources for Data-Efficient Counter-Narrative Generation in Korean</h3>
+                        <p class="publication-authors">Seungyoon Lee, Chanjun Park, Dahyun Jung, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Heuiseok Lim*</p>
+                        <p class="publication-venue">Language Resources and Evaluation Conference (LREC-COLING), 2024</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2024.lrec-main.907/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">LREC-COLING 2024</span>
+                        <h3 class="publication-title">Detecting Critical Errors Considering Cross-Cultural Factors in English-Korean Translation</h3>
+                        <p class="publication-authors">Sugyeong Eo, Jungwoo Lim, Chanjun Park, Dahyun Jung, Seonmin Koo, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">Language Resources and Evaluation Conference (LREC-COLING), 2024</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2024.lrec-main.421/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">Exploiting Hanja-Based Resources in Processing Korean Historic Documents Written by Common Literati</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Myunghoon Kang, Yoonseok Choi, Hyunjoong Kim, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2024</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/10504272" target="_blank">Paper</a>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- 2023 Publications -->
@@ -187,6 +257,66 @@
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2023.emnlp-main.367/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">EMNLP 2023</span>
+                        <h3 class="publication-title">KEBAP: Korean Error Explainable Benchmark Dataset for ASR and Post-processing</h3>
+                        <p class="publication-authors">Seonmin Koo, Chanjun Park, Jinsung Kim, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2023.emnlp-main.292/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">EMNLP 2023 Findings</span>
+                        <h3 class="publication-title">CReTIHC: Designing Causal Reasoning Tasks about Temporal Interventions and Hallucinated Confoundings</h3>
+                        <p class="publication-authors">Changwoo Chun, SongEun Lee, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Findings, 2023</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2023.findings-emnlp.693/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">Expert Systems with Applications</span>
+                        <h3 class="publication-title">Doubts on the reliability of parallel corpus filtering</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Seonmin Koo, Jungseob Lee, Seungjun Lee, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Yoonna Jang, Heuiseok Lim*</p>
+                        <p class="publication-venue">Expert Systems with Applications, 2023</p>
+                        <div class="publication-links">
+                            <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417423014641" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IJCNLP-AACL 2023</span>
+                        <h3 class="publication-title">Informative Evidence-guided Prompt-based Fine-tuning for English-Korean Critical Error Detection</h3>
+                        <p class="publication-authors">Dahyun Jung, Sugyeong Eo, Chanjun Park, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">International Joint Conference on Natural Language Processing and Conference of the Asia-Pacific Chapter of the ACL (IJCNLP-AACL), 2023</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2023.ijcnlp-main.22/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">Uncovering the Risks and Drawbacks Associated with the Use of Synthetic Data for Grammatical Error Correction</h3>
+                        <p class="publication-authors">Seonmin Koo, Chanjun Park, Seolhwa Lee, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2023</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/10234394" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">ACL 2023 Demo</span>
+                        <h3 class="publication-title">PEEP-Talk: A Situational Dialogue-based Chatbot for English Education</h3>
+                        <p class="publication-authors">Seungjun Lee, Yoonna Jang, Chanjun Park, Jungseob Lee, <strong>Jaehyung Seo</strong>, Hyeonseok Moon, Sugyeong Eo, Seounghoon Lee, Bernardo Yahya, Heuiseok Lim*</p>
+                        <p class="publication-venue">Annual Meeting of the Association for Computational Linguistics (ACL) Demo, 2023</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2023.acl-demo.18/" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
@@ -233,6 +363,76 @@
                             <a href="https://www.mdpi.com/2227-7390/10/8/1335" target="_blank">Paper</a>
                         </div>
                     </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">COLING 2022</span>
+                        <h3 class="publication-title">QUAK: A Synthetic Quality Estimation Dataset for Korean-English Neural Machine Translation</h3>
+                        <p class="publication-authors">Sugyeong Eo, Chanjun Park, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Gyeongmin Kim, Jungseob Lee, Heuiseok Lim*</p>
+                        <p class="publication-venue">International Conference on Computational Linguistics (COLING), 2022</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2022.coling-1.460/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">AACL 2022 Demo</span>
+                        <h3 class="publication-title">PicTalky: Augmentative and Alternative Communication for Language Developmental Disabilities</h3>
+                        <p class="publication-authors">Chanjun Park, Yoonna Jang, Seolhwa Lee, <strong>Jaehyung Seo</strong>, Kisu Yang, Heuiseok Lim*</p>
+                        <p class="publication-venue">Asia-Pacific Chapter of the ACL (AACL) Demo, 2022</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2022.aacl-demo.3/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">LREC 2022</span>
+                        <h3 class="publication-title">Priming Ancient Korean Neural Machine Translation</h3>
+                        <p class="publication-authors">Chanjun Park, Seolhwa Lee, <strong>Jaehyung Seo</strong>, Hyeonseok Moon, Sugyeong Eo, Heuiseok Lim*</p>
+                        <p class="publication-venue">Language Resources and Evaluation Conference (LREC), 2022</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2022.lrec-1.3/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">LREC 2022</span>
+                        <h3 class="publication-title">Empirical Analysis of Noising Scheme based Synthetic Data Generation for Automatic Post-editing</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Seolhwa Lee, <strong>Jaehyung Seo</strong>, Jungseob Lee, Sugyeong Eo, Heuiseok Lim*</p>
+                        <p class="publication-venue">Language Resources and Evaluation Conference (LREC), 2022</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2022.lrec-1.93/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">Word-Level Quality Estimation for Korean-English Neural Machine Translation</h3>
+                        <p class="publication-authors">Sugyeong Eo, Chanjun Park, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2022</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/9761258" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">An Automatic Post Editing with Efficient and Simple Data Generation Method</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Sugyeong Eo, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2022</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/9714400" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">Utilization Strategy of User Engagements in Korean Fake News Detection</h3>
+                        <p class="publication-authors">Myunghoon Kang, <strong>Jaehyung Seo</strong>, Chanjun Park, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2022</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/9841541" target="_blank">Paper</a>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- 2021 Publications -->
@@ -255,6 +455,36 @@
                         <p class="publication-venue">Workshop on Asian Translation (WAT), 2021</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2021.wat-1.10/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">Grounded Vocabulary for Image Retrieval Using a Modified Multi-Generator Generative Adversarial Network</h3>
+                        <p class="publication-authors">Kuekyeng Kim, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2021</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/9585128" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">IEEE Access</span>
+                        <h3 class="publication-title">An Empirical Study on Automatic Post Editing for Neural Machine Translation</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Sugyeong Eo, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">IEEE Access, 2021</p>
+                        <div class="publication-links">
+                            <a href="https://ieeexplore.ieee.org/document/9528385" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">arXiv Preprint</span>
+                        <h3 class="publication-title">Automatic Knowledge Augmentation for Generative Commonsense Reasoning</h3>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
+                        <p class="publication-venue">arXiv Preprint, 2021</p>
+                        <div class="publication-links">
+                            <a href="https://arxiv.org/abs/2111.00192" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
