Move language transfer paper to end of 2025, update Automatic Knowledge Augmentation to NeurIPS DCAI Workshop

--- a/publications.html
+++ b/publications.html
@@ -63,16 +63,6 @@
                 <h2 style="margin-bottom: var(--spacing-lg);">2025</h2>
                 <div class="card" style="margin-bottom: var(--spacing-2xl);">
                     <div class="publication-item">
-                        <span class="publication-year">Expert Systems with Applications</span>
-                        <h3 class="publication-title">An analysis on language transfer of pre-trained language model with cross-lingual post-training</h3>
-                        <p class="publication-authors">Suhyune Son, Chanjun Park, Jungseob Lee, Midan Shim, Chanhee Lee, Yoonna Jang, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
-                        <p class="publication-venue">Expert Systems with Applications, 2025</p>
-                        <div class="publication-links">
-                            <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417424027088" target="_blank">Paper</a>
-                        </div>
-                    </div>
-
-                    <div class="publication-item">
                         <span class="publication-year">EMNLP 2025</span>
                         <h3 class="publication-title">🌟 The Impact of Negated Text on Hallucination with Large Language Models</h3>
                         <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Heuiseok Lim*</p>
@@ -149,6 +139,16 @@
                         <p class="publication-venue">North American Chapter of the ACL (NAACL), 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.naacl-long.325/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">Expert Systems with Applications</span>
+                        <h3 class="publication-title">An analysis on language transfer of pre-trained language model with cross-lingual post-training</h3>
+                        <p class="publication-authors">Suhyune Son, Chanjun Park, Jungseob Lee, Midan Shim, Chanhee Lee, Yoonna Jang, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">Expert Systems with Applications, 2025</p>
+                        <div class="publication-links">
+                            <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417424027088" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
@@ -479,10 +479,10 @@
                     </div>
 
                     <div class="publication-item">
-                        <span class="publication-year">arXiv Preprint</span>
+                        <span class="publication-year">NeurIPS DCAI Workshop</span>
                         <h3 class="publication-title">Automatic Knowledge Augmentation for Generative Commonsense Reasoning</h3>
                         <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
-                        <p class="publication-venue">arXiv Preprint, 2021</p>
+                        <p class="publication-venue">NeurIPS Data-Centric AI Workshop, 2021</p>
                         <div class="publication-links">
                             <a href="https://arxiv.org/abs/2111.00192" target="_blank">Paper</a>
                         </div>
