Update Team page: rename Faculty to Professor, add Jaehyung Seo profile with left-aligned layout

--- a/team.html
+++ b/team.html
@@ -56,44 +56,44 @@
             </div>
         </section>
 
-        <!-- Faculty -->
+        <!-- Professor -->
         <section class="section">
             <div class="container">
                 <div class="section-header">
-                    <h2>Faculty</h2>
-                    <p>Principal investigators leading our research</p>
+                    <h2>Professor</h2>
+                    <p>Principal investigator leading our research</p>
                 </div>
-                
-                <div class="grid grid-3">
-                    <article class="card team-card">
-                        <img src="assets/images/team/jane-smith.svg" alt="Dr. Jane Smith" class="team-photo">
-                        <h3 class="team-name">Dr. Jane Smith</h3>
-                        <p class="team-role">Lab Director, Professor</p>
-                        <p class="team-bio">
-                            Jane leads the LM Research Lab and focuses on large language models and 
-                            their applications. She received her PhD from Stanford University.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:jane.smith@university.edu" aria-label="Email">📧</a>
-                            <a href="https://scholar.google.com" target="_blank" aria-label="Google Scholar">🎓</a>
-                            <a href="https://twitter.com" target="_blank" aria-label="Twitter">🐦</a>
-                            <a href="assets/files/cv-jane-smith.pdf" aria-label="CV">📄</a>
+
+                <div class="professor-section">
+                    <article class="professor-card">
+                        <div class="professor-info">
+                            <h3 class="professor-name">Jaehyung Seo</h3>
+                            <p class="professor-role">Assistant Professor, KonKuk University</p>
+                            <p class="professor-affiliation">Affiliation: Computer Science and Engineering</p>
+                            <p class="professor-education">Ph.D. in Computer Science and Engineering, Korea University</p>
+
+                            <div class="professor-research">
+                                <h4>Research Interests</h4>
+                                <p>Language Model, Hallucination, Model Editing, Commonsense Reasoning, Language Resources & Evaluation, Information Retrieval</p>
+                            </div>
+
+                            <div class="professor-awards">
+                                <h4>Honors & Awards</h4>
+                                <ul>
+                                    <li><strong>2025.10</strong> BEST Paper Award, The 37th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
+                                    <li><strong>2025.08</strong> Selected as a Member of the National Representative AI Research Team (with NC AI), South Korea</li>
+                                    <li><strong>2024.10</strong> BEST Paper Award, The 36th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
+                                    <li><strong>2023.10</strong> Outstanding Paper Award, The 35th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
+                                    <li><strong>2022.12</strong> NAVER Ph.D Fellowship Award, Scholarship Award, South Korea</li>
+                                    <li><strong>2022.12</strong> 1st Place in WMT 2022 QE Task 3, WMT 2022 - EMNLP 2022, Abu Dhabi</li>
+                                    <li><strong>2022.10</strong> Outstanding Paper Award, The 34th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
+                                    <li><strong>2021.10</strong> Outstanding Paper Award, The 33rd Annual Conference on Human & Cognitive Language Technology, South Korea</li>
+                                    <li><strong>2021.07</strong> 4th Place in CommonGen 1.1 Leaderboard, World Record</li>
+                                </ul>
+                            </div>
                         </div>
-                    </article>
-                    
-                    <article class="card team-card">
-                        <img src="assets/images/team/john-doe.svg" alt="Dr. John Doe" class="team-photo">
-                        <h3 class="team-name">Dr. John Doe</h3>
-                        <p class="team-role">Associate Professor</p>
-                        <p class="team-bio">
-                            John specializes in dialogue systems and conversational AI. He joined 
-                            the lab in 2020 after working at Google Research.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:john.doe@university.edu" aria-label="Email">📧</a>
-                            <a href="https://scholar.google.com" target="_blank" aria-label="Google Scholar">🎓</a>
-                            <a href="https://github.com" target="_blank" aria-label="GitHub">💻</a>
-                            <a href="assets/files/cv-john-doe.pdf" aria-label="CV">📄</a>
+                        <div class="professor-photo-container">
+                            <img src="assets/images/team/jaehyung-seo.jpg" alt="Jaehyung Seo" class="professor-photo">
                         </div>
                     </article>
                 </div>
