Update professor section: add profile photo, reorganize layout with awards below

--- a/team.html
+++ b/team.html
@@ -66,34 +66,38 @@
 
                 <div class="professor-section">
                     <article class="professor-card">
-                        <div class="professor-info">
-                            <h3 class="professor-name">Jaehyung Seo</h3>
-                            <p class="professor-role">Assistant Professor, KonKuk University</p>
-                            <p class="professor-affiliation">Affiliation: Computer Science and Engineering</p>
-                            <p class="professor-education">Ph.D. in Computer Science and Engineering, Korea University</p>
+                        <!-- Top section: Info + Photo side by side -->
+                        <div class="professor-top">
+                            <div class="professor-info">
+                                <h3 class="professor-name">Jaehyung Seo</h3>
+                                <p class="professor-role">Assistant Professor, KonKuk University</p>
+                                <p class="professor-affiliation">Affiliation: Computer Science and Engineering</p>
+                                <p class="professor-education">Ph.D. in Computer Science and Engineering, Korea University</p>
 
-                            <div class="professor-research">
-                                <h4>Research Interests</h4>
-                                <p>Language Model, Hallucination, Model Editing, Commonsense Reasoning, Language Resources & Evaluation, Information Retrieval</p>
+                                <div class="professor-research">
+                                    <h4>Research Interests</h4>
+                                    <p>Language Model, Hallucination, Model Editing, Commonsense Reasoning, Language Resources & Evaluation, Information Retrieval</p>
+                                </div>
                             </div>
-
-                            <div class="professor-awards">
-                                <h4>Honors & Awards</h4>
-                                <ul>
-                                    <li><strong>2025.10</strong> BEST Paper Award, The 37th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
-                                    <li><strong>2025.08</strong> Selected as a Member of the National Representative AI Research Team (with NC AI), South Korea</li>
-                                    <li><strong>2024.10</strong> BEST Paper Award, The 36th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
-                                    <li><strong>2023.10</strong> Outstanding Paper Award, The 35th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
-                                    <li><strong>2022.12</strong> NAVER Ph.D Fellowship Award, Scholarship Award, South Korea</li>
-                                    <li><strong>2022.12</strong> 1st Place in WMT 2022 QE Task 3, WMT 2022 - EMNLP 2022, Abu Dhabi</li>
-                                    <li><strong>2022.10</strong> Outstanding Paper Award, The 34th Annual Conference on Human & Cognitive Language Technology, South Korea</li>
-                                    <li><strong>2021.10</strong> Outstanding Paper Award, The 33rd Annual Conference on Human & Cognitive Language Technology, South Korea</li>
-                                    <li><strong>2021.07</strong> 4th Place in CommonGen 1.1 Leaderboard, World Record</li>
-                                </ul>
+                            <div class="professor-photo-container">
+                                <img src="assets/images/team/jaehyung-seo.jpg" alt="Jaehyung Seo" class="professor-photo">
                             </div>
                         </div>
-                        <div class="professor-photo-container">
-                            <img src="assets/images/team/jaehyung-seo.jpg" alt="Jaehyung Seo" class="professor-photo">
+
+                        <!-- Bottom section: Awards (full width) -->
+                        <div class="professor-awards">
+                            <h4>Honors & Awards</h4>
+                            <div class="awards-grid">
+                                <div class="award-item"><strong>2025.10</strong> BEST Paper Award, The 37th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2025.08</strong> Selected as a Member of the National Representative AI Research Team (with NC AI), South Korea</div>
+                                <div class="award-item"><strong>2024.10</strong> BEST Paper Award, The 36th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2023.10</strong> Outstanding Paper Award, The 35th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2022.12</strong> NAVER Ph.D Fellowship Award, Scholarship Award, South Korea</div>
+                                <div class="award-item"><strong>2022.12</strong> 1st Place in WMT 2022 QE Task 3, WMT 2022 - EMNLP 2022, Abu Dhabi</div>
+                                <div class="award-item"><strong>2022.10</strong> Outstanding Paper Award, The 34th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2021.10</strong> Outstanding Paper Award, The 33rd Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2021.07</strong> 4th Place in CommonGen 1.1 Leaderboard, World Record</div>
+                            </div>
                         </div>
                     </article>
                 </div>
