Fix professor section: vertical layout with photo in center, fix image path

--- a/team.html
+++ b/team.html
@@ -66,25 +66,26 @@
 
                 <div class="professor-section">
                     <article class="professor-card">
-                        <!-- Top section: Info + Photo side by side -->
-                        <div class="professor-top">
-                            <div class="professor-info">
-                                <h3 class="professor-name">Jaehyung Seo</h3>
-                                <p class="professor-role">Assistant Professor, KonKuk University</p>
-                                <p class="professor-affiliation">Affiliation: Computer Science and Engineering</p>
-                                <p class="professor-education">Ph.D. in Computer Science and Engineering, Korea University</p>
-
-                                <div class="professor-research">
-                                    <h4>Research Interests</h4>
-                                    <p>Language Model, Hallucination, Model Editing, Commonsense Reasoning, Language Resources & Evaluation, Information Retrieval</p>
-                                </div>
-                            </div>
-                            <div class="professor-photo-container">
-                                <img src="assets/images/team/jaehyung-seo.jpg" alt="Jaehyung Seo" class="professor-photo">
-                            </div>
+                        <!-- Basic Info -->
+                        <div class="professor-header">
+                            <h3 class="professor-name">Jaehyung Seo</h3>
+                            <p class="professor-role">Assistant Professor, KonKuk University</p>
+                            <p class="professor-affiliation">Affiliation: Computer Science and Engineering</p>
+                            <p class="professor-education">Ph.D. in Computer Science and Engineering, Korea University</p>
                         </div>
 
-                        <!-- Bottom section: Awards (full width) -->
+                        <!-- Photo -->
+                        <div class="professor-photo-container">
+                            <img src="./assets/images/team/jaehyung-seo.jpg" alt="Jaehyung Seo" class="professor-photo">
+                        </div>
+
+                        <!-- Research Interests -->
+                        <div class="professor-research">
+                            <h4>Research Interests</h4>
+                            <p>Language Model, Hallucination, Model Editing, Commonsense Reasoning, Language Resources & Evaluation, Information Retrieval</p>
+                        </div>
+
+                        <!-- Honors & Awards -->
                         <div class="professor-awards">
                             <h4>Honors & Awards</h4>
                             <div class="awards-grid">
